[project]
name = "ogilo-array"
version = "0.0.3"
authors = [
  { name="Eachan Johnson", email="eachan.johnson@crick.ac.uk" },
]
description = "Automated construction of oligo library sequences for oligo array synthesis."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["biology", "bioinformatics", "biotechnology", "science", "assay", "sequencing", "oligonucleotides", "oligos"]

classifiers = [  
  
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ 
  "nemony",
  "streq",
  "tqdm",
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/scbirlab/ogilo"
"Bug Tracker" = "https://github.com/scbirlab/ogilo/issues"

[project.scripts] 
ogilo = "ogilo.cli:main"

[tool.setuptools]
packages = ["ogilo"]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"ogilo" = ["data/handles/*-pcr-handles.csv"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
